Update README files.

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,12 +39,12 @@ devtools::install_github("AnthonyChristidis/RPESE")
 ``` r
 # Sample Code
 library(RPESE)
-# Loading managers data
-data(edhec)
+# Loading hedge fund data
+data(edhec, package = "PerformanceAnalytics")
 colnames(edhec) = c("CA", "CTAG", "DIS", "EM","EMN", "ED", "FIA",
                     "GM", "LS", "MA", "RV", "SS", "FoF")
 # Computing the standard errors for the three influence functions based approaches
-ES.out <- ES.SE(edhec, se.method = c("IFiid","IFcor","IFcorAdapt"),
+ES.out <- ES.SE(edhec, se.method = c("IFiid","IFcor","IFcorPW"),
                 prewhiten = FALSE, 
                 cleanOutliers = FALSE, 
                 fitting.method = c("Exponential", "Gamma")[1])
